<resources>
    <string name="app_name">Unimarket USC</string>
    <string name="texto_inicio1">Encuentra lo que necesitas, vende lo que no usas</string>
    <string name="texto_inicio2">Compra, vende e intercambia productos con otros estudiantes de la USC de manera rápida y segura.</string>
    <string name="boton_iniciarsesion">Iniciar sesion</string>
    <string name="ingresado_aun">¿No has ingresado aun?</string>
    <string name="Transformacion_buengobierno">Transformacion y Buen Gobierno</string>
    <string name="Registrate">Registrate</string>
    <string name="Inicio_Sesion">Iniciar Sesión</string>
    <string name="Registrarse">Registrarse</string>
    <string name="Registrarme">Registrarme</string>
    <string name="Usuario">Usuario</string>
    <string name="Nombre_completo">Nombre Completo</string>
    <string name="Correo_Institucional">Correo Institucional</string>
    <string name="Documento_Identificacion">Documento de Identificacion</string>
    <string name="Número_contacto">Número de contacto (opcional)</string>
    <string name="Correctamente">Acuerdate de ingresar tu Usuario y Contraseña correctamente</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Confirmar_contraseña">Confirmar Contraseña</string>
    <string name="Contraseña_Incorrecta">Contraseña Incorrecta</string>"
    <string name="Olvidaste_tu_contraseña">¿Olvidaste tu contraseña?</string>
    <string name="Conexion_USC">Acepto la verificacion de mi informacion para comprobar mi conexion con la USC</string>
    <string name="Terminos_condiciones">Acepto terminos y condiciones</string>
    <string name="punto">.</string>
    <string name="Ubicacion">Ubicacion</string>
    <string name="Buscar_en_CyberFruver">Buscar</string>
    <string name="Carrito">Carrito</string>
    <string name="ingresa_codigo">Ingresa el código que hemos enviado a tu correo electrónico para verificar tu cuenta</string>
    <string name="Verificar_cuenta">Verificar cuenta</string>
    <string name="Confirmar_código">Confirmar código</string>
    <string name="Historial">Historial</string>
    <string name="Perfil">Perfil</string>
    <string name="Cerrar_sesion">Cerrar sesión</string>
    <string name="Pagar">Pagar</string>
    <string name="ARTICULOS">ARTICULOS</string>
    <string name="Texto_recuperarcontraseña">No te preocupes, suele pasar, escribe tu correo y nosotros nos encargamos del resto</string>
    <string name="Texto_recuperarcontraseña2">Ingresa el código que hemos enviado a tu correo electrónico y podrás cambiar tu contraseña.</string>
    <string name="Cambiado_contraseña">¡Has cambiado tu contraseña correctamente!</string>
    <string name="Recuperar_contraseña">Recuperar contraseña</string>
    <string name="Enviar_codigo">Enviar código de recuperación</string>
    <string name="Ingresa_nueva_contraseña">Ingresa tu nueva contraseña</string>
    <string name="Contraseña_nueva">Contraseña nueva</string>
    <string name="Confirmar_nueva_contraseña">Confirmar nueva contraseña</string>
    <string name="Texto_nueva_contraseña">Inicia sesión ahora mismo para ingresar a Unimarket USC</string>
    <string name="Has_sido_registrado_correctamente">¡Has sido registrado correctamente!</string>


</resources>