<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="."
        app:srcCompat="@drawable/resource_return" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="308dp"
        android:layout_height="184dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:srcCompat="@drawable/logo_usc_grande" />

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="403dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="247dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Registrarsetxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:gravity="center"
                android:text="@string/Registrarse"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:hint="@string/Nombre_completo"
                android:padding="12dp"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/Documento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:hint="@string/Documento_Identificacion"
                android:padding="12dp"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/Correo_Institucional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:inputType="textEmailAddress"
                android:hint="@string/Correo_Institucional"
                android:padding="12dp"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:backgroundTint="@color/white"
                android:hint="@string/Contraseña"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/Confirmar_contraseña"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/Confirmar_contraseña"
                android:inputType="textPassword" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="372dp"
            android:layout_height="30dp"
            android:orientation="horizontal"></LinearLayout>

        <LinearLayout
            android:layout_width="324dp"
            android:layout_height="56dp"
            android:layout_marginBottom="24dp"
            android:gravity="left"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:text="@string/Terminos_condiciones" />

        </LinearLayout>

        <Button
            android:id="@+id/Inicio_Sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/Registrarme"
            android:textColor="@color/white" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>