<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue">

    <ImageView
        android:id="@+id/Decoracion"
        android:layout_width="338dp"
        android:layout_height="279dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Btnvolver"
        app:srcCompat="@drawable/decoracion_recuperar_contrase_a" />

    <ImageButton
        android:id="@+id/Btnvolver"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="Volver"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="347dp"
        android:layout_marginTop="12dp"
        android:background="#FFFFFF"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Decoracion">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:gravity="center"
            android:text="@string/Recuperar_contraseña"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center|top"
            android:text="@string/Ingresa_nueva_contraseña" />

        <EditText
            android:id="@+id/Nueva_contraseña"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/Contraseña_nueva"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/Confirmar_nueva_contraseña"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/Confirmar_contraseña"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#000000"
            android:text="@string/Confirmar_nueva_contraseña"
            android:textColor="@color/blanco" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>