<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/blue">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="308dp"
        android:layout_height="319dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/journal_woman_unboxing_a_surprise_star_1" />

    <LinearLayout
        android:layout_width="408dp"
        android:layout_height="243dp"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:gravity="center"
            android:text="@string/Has_sido_registrado_correctamente"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center|top"
            android:text="@string/Texto_nueva_contraseña"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#B20000"
            android:text="@string/Inicio_Sesion"
            android:textColor="@color/blanco" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>