<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1e4e79"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Iniciar_sesion"
        android:layout_width="194dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="#0047AB"
        android:text="@string/boton_iniciarsesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <TextView
        android:id="@+id/ingresado_aun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="132dp"
        android:text="@string/ingresado_aun"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/Registrate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Iniciar_sesion" />

    <TextView
        android:id="@+id/Registrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/Registrate"
        android:textColor="#000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/ingresado_aun"
        app:layout_constraintStart_toEndOf="@+id/ingresado_aun" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="82dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Registrate"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/usc_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:text="@string/Transformacion_buengobierno"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/Registrate"
        app:layout_constraintVertical_bias="0.918" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/unimarket_usc_logo_nuevo_removebg_preview" />


</androidx.constraintlayout.widget.ConstraintLayout>